--- a/package.json
+++ b/package.json
@@ -16,3 +16,5 @@
     "deploy": "surge ./public --domain http://katiekatieravenousravenous1234.surge.sh/"
   }
 }
+
+// URL is actually  http://dependent-ducks.surge.sh/
