--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ravenous",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dependent-ducks.surge.sh/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -16,5 +17,3 @@
     "deploy": "surge ./public --domain http://katiekatieravenousravenous1234.surge.sh/"
   }
 }
-
-// URL is actually  http://dependent-ducks.surge.sh/
